# PointCloudObstacleDetection

./: .gitignore  CMakeLists.txt  README.md
src/: kdtree.h  point_cloud_detection.cpp  processPointClouds.cpp  processPointClouds.h  traditionalpointcloud.cpp
src/render/: box.h  render.cpp  render.h
src/sensors/: lidar.h
tools/: csv2bin.py  distance.py  pcd_bi2ascii.py
tools/data/: 1.pcd  2020-12-03-23-58.pcd  2020-12-04-00-10.pcd
tools/pcdxyzi_pcdxyz/: CMakeLists.txt  pcdxyzi_pcdxyz.cpp
tools/point_clik/: 1.pcd  CMakeLists.txt  point_click.cpp  test.cpp
tools/test/: CMakeLists.txt  test.cpp
tools/test/grou_out/: 0_ground.pcd  1_ground.pcd  2_ground.pcd  3.pcd  3_ground.pcd  4.pcd
tools/test/pcd/: 2.pcd
tools/test/rem_out/: 0_rem.pcd  1_rem.pcd  2_rem.pcd  3_rem.pcd
